[package]
name = "listen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
bincode = "1.3.3"
anchor-lang = "=0.29.0"
anchor-client = "=0.29.0"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = "0.8.4"
dialoguer = "0.11.0"
flamer = "0.5.0"
jupiter-swap-api-client = "0.1.0"
prometheus = "0.13.3"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.199"
serde_json = "1.0.116"
serde_with = "3.8.1"
solana-account-decoder = "<1.17.0"
solana-client = "<1.17.0"
solana-sdk = "<1.17.0"
solana-transaction-status = "<1.17.0"
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-test = "0.4.4"
warp = "0.3.7"
raydium-library = { git = "https://github.com/piotrostr/raydium-library" }
spl-associated-token-account = { version = "2.2.0", features = [
  "no-entrypoint",
] }
raydium_amm = { git = "https://github.com/piotrostr/raydium-amm", default-features = false, features = [
  "client",
] }
borsh = "1.5.0"
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
dotenv = "0.15.0"
jito-searcher-client = { git = "https://github.com/piotrostr/searcher-examples", version = "0.1.0" }
jito-protos = { git = "https://github.com/piotrostr/searcher-examples", version = "0.1.0" }
tonic = { version = "0.10", features = [
  "tls",
  "tls-roots",
  "tls-webpki-roots",
] }
timed = "0.2.1"
dotenv_codegen = "0.15.0"
ctrlc = "3.4.4"
flexi_logger = { version = "0.28.0", features = ["async"] }
futures-util = "0.3.30"
bs58 = "0.5.1"
actix-web = "4.5.1"
csv = "1.3.0"
mongodb = { version = "2.8.2", features = [
  "async-std-runtime",
], default-features = false }
base64 = "0.22.1"
console-subscriber = "0.2.0"
flame = "0.2.2"
