[workspace]
resolver = "2"
members = [
  "bin/listen",
  "crates/buyer",
  "crates/engine",
  "crates/jito",
  "crates/jito-protos",
  "crates/metrics",
  "crates/orca",
  "crates/pump-fun",
  "crates/raydium",
  "crates/searcher-client",
  "crates/seller",
  "crates/util",
]
default-members = ["bin/listen"]

[workspace.package]
name = "listen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "solana actions for AI agents"
documentation = "docs.listen-rs.com"

[workspace.dependencies]
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "8.1.1", features = ["actix-web"] }
anyhow = "1.0.53"
bincode = "1.3.3"
bytes = "1.4.0"
anchor-lang = "=0.29.0"
anchor-client = "=0.29.0"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = "0.8.4"
dialoguer = "0.11.0"
arrayref = "0.3.9"
bytemuck = "1.21.0"
flamer = "0.5.0"
jupiter-swap-api-client = "0.1.0"
prometheus = "0.13.3"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = "1.0.199"
serde_json = "1.0.116"
serde_with = "3.8.1"
solana-account-decoder = "2.0.3"
solana-client = "2.0.3"
solana-sdk = "2.0.3"
solana-perf = "2.0.3"
solana-metrics = "2.0.3"
solana-transaction-status = "2.0.3"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-test = "0.4.4"
warp = "0.3.7"
spl-associated-token-account = { version = "5.0.0", features = [
  "no-entrypoint",
] }
# raydium_amm = { git = "https://github.com/piotrostr/raydium-amm", default-features = false, features = [
#   "client",
# ], version = "0.3.0" }
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
dotenv = "0.15.0"
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.10", features = [
  "tls",
  "tls-roots",
  "tls-webpki-roots",
] }
tonic-build = "0.10.0"
timed = "0.2.1"
ctrlc = "3.4.4"
flexi_logger = { version = "0.28.0", features = ["async"] }
futures-util = "0.3.30"
bs58 = "0.5.1"
actix-web = "4.9.0"
csv = "1.3.0"
mongodb = { version = "2.8.2", features = [
  "async-std-runtime",
], default-features = false }
base64 = "0.22.1"
console-subscriber = "0.2.0"
flame = "0.2.2"
actix-rt = "2.10.0"
borsh = "1.5.1"
indicatif = "0.17"
rig-core = "0.6.0"
thiserror = "2.0.9"
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
hyper = { version = "1.4.1", features = ["full"] }
tokio-native-tls = "0.3.1"
hyper-util = "0.1.7"
http-body-util = "0.1.2"
uint = "0.10.0"
enumflags2 = "0.6.4"
safe-transmute = "0.11.3"
num-derive = "0.3.0"
num_enum = "0.5.7"
num-traits = "0.2.12"

jito-protos = { path = "crates/jito-protos" }
listen-buyer = { path = "crates/buyer" }
listen-engine = { path = "crates/engine" }
listen-jito = { path = "crates/jito" }
listen-metrics = { path = "crates/metrics" }
listen-orca = { path = "crates/orca" }
listen-pump-fun = { path = "crates/pump-fun" }
listen-raydium = { path = "crates/raydium" }
listen-searcher-client = { path = "crates/searcher-client" }
listen-seller = { path = "crates/seller" }
listen-util = { path = "crates/util" }

[workspace.lints]
# clippy.unwrap_used = "warn"
# clippy.expect_used = "warn"
