[package]
name = "evm-approvals"
version = "0.1.0"
edition = "2021"
description = "send EVM approvals with no heavy deps"
license = "MIT"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
