[package]
name = "blockhash-cache"
version = "0.1.0"
edition = "2021"
description = "minimal Solana blockhash cache"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
tracing = "0.1"
hex = "0.4"
thiserror = "2.0.11"
base64 = "0.22.1"
bs58 = "0.5.1"
solana-sdk = { version = "2.1.9" }
bincode = "1.3.3"

[dev-dependencies]
dotenv = "0.15.0"
