[package]
name = "lifi"
version = "0.2.0"
edition = "2021"
description = "LiFi API implementation in Rust"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
