[package]
name = "listen-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
async-stream = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
redis = { version = "0.23.3", features = ["tokio-comp"] }
