[package]
name = "listen-adapter"
version = "0.1.0"
edition = "2021"
default-run = "adapter"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-ws = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
async-stream = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
redis = { version = "0.23.3", features = ["tokio-comp"] }
clickhouse = { version = "0.13.1", features = ["native-tls"] }
rustls-pemfile = "2"
rustls = { version = "0.23" }

[[bin]]
name = "adapter"
path = "bin/adapter.rs"
