[package]
name = "listen-adapter"
version = "0.1.0"
edition = "2021"
default-run = "adapter"

[features]
default = []

[dependencies]
actix-web = { version = "4" }
actix-ws = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
async-stream = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
redis = { version = "0.23.3", features = ["tokio-comp"] }
clickhouse = { version = "0.13.1", features = ["native-tls"] }
chrono = "0.4"
ctor = "0.3.3"
bb8-redis = "0.20.0"
actix-cors = "0.7.0"
url = "2.5.4"
regex = "1.10.2"
listen-tracing = { path = "../listen-tracing" }

[[bin]]
name = "adapter"
path = "bin/adapter.rs"
