[package]
name = "listen"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
solana-account-decoder = "2.1.9"
solana-sdk = "2.1.9"
spl-token = "7.0.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
bincode = "1.3.3"
borsh = "0.10.3"
base64 = "0.22.1"
timed = "0.2.1"
