[package]
name = "listen"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "solana actions for AI agents"
documentation = "https://docs.listen-rs.com"

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
solana-account-decoder = "2.1.9"
solana-sdk = "2.1.9"
spl-token = "7.0.0"
reqwest = { version = "0.12.4", features = ["json", "stream", "multipart"] }
bincode = "1.3.3"
borsh = "1.5.1"
base64 = "0.22.1"
timed = "0.2.1"
solana-client = "2.1.9"
serde = "1.0.199"
serde_json = "1.0.116"
solana-transaction-status = "2.1.9"
rand = "0.8.5"
chrono = "0.4.39"
dotenv = "0.15.0"
hex = "0.4.3"
tokio = { version = "1.37.0", features = ["full"] }
spl-associated-token-account = "6.0.0"
serde_with = "3.12.0"
