[package]
name = "listen-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
serde_json = "1.0.138"
async-stream = "0.3.6"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
http = "1.2.0"
tonic = { version = "0.12", features = ["gzip", "tls-roots"] }
tokio-retry = "0.3.0"
prost = "0.13.4"
prost-types = "0.13.4"
config = "0.15.7"
reqwest = "0.12.12"
regex = "1.11.1"
semver = "1.0.25"
lazy_static = "1.5.0"
tracing-subscriber = "0.3.19"
surrealdb = "2.1.4"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
