[package]
name = "listen-data"
version = "0.1.0"
edition = "2021"
default-run = "main"

[features]
default = ["geyser"]
geyser = ["carbon-yellowstone-grpc-datasource", "yellowstone-grpc-proto"]
rpc = [
  "carbon-rpc-block-subscribe-datasource",
  "carbon-rpc-program-subscribe-datasource",
  "carbon-rpc-transaction-crawler-datasource",
]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
carbon-core = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.4.0" }
carbon-log-metrics = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.4.0" }
carbon-raydium-amm-v4-decoder = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.4.0" }
ctor = "0.2.9"
dotenv = "0.15.0"

# need yellowstone protos compat
solana-account-decoder = "=2.0.10"
solana-client = "=2.0.10"
solana-sdk = "=2.0.10"
solana-transaction-status = "=2.0.10"

tokio = { version = "1.40.0", features = ["rt", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json"] }
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde_json = "1.0.138"
mpl-token-metadata = "5.1.0"
spl-token = "5.0.2"
clap = { version = "4.5.28", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
chrono = "0.4.39"
futures-util = "0.3.30"
url = "2.5.4"
once_cell = "1.19"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }

# rpc
carbon-rpc-block-subscribe-datasource = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.4.0", optional = true }
carbon-rpc-program-subscribe-datasource = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.4.0", optional = true }
carbon-rpc-transaction-crawler-datasource = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.4.0", optional = true }

# geyser
carbon-yellowstone-grpc-datasource = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", optional = true, version = "0.4.0" }
yellowstone-grpc-proto = { version = "=2.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git", rev = "17faff5ac068c2f212c471acf67a8dcc1d7caff5", optional = true }
clickhouse = { version = "0.13.1", features = ["native-tls", "inserter"] }
bb8-redis = "0.20.0"
thiserror = "2.0.11"
tracing-journald = "0.3.1"


[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"
required-features = ["geyser"]

[[bin]]
name = "rpc-crawler"
path = "src/bin/rpc_crawler.rs"
required-features = ["rpc"]

[[bin]]
name = "main"
path = "src/main.rs"
