[package]
name = "listen-engine"
version = "0.1.0"
edition = "2021"
default-run = "engine"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
ctor = "0.2.9"
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
listen-tracing = { git = "https://github.com/piotrostr", package = "listen-tracing", branch = "feat/v4.0.0" }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
futures-util = "0.3.31"
actix-web = { version = "4", features = ["rustls-0_23"] }
thiserror = "2.0.11"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
once_cell = "1.18"
bb8-redis = "0.20.0"
privy = { git = "https://github.com/piotrostr/listen", package = "privy", branch = "feat/v4.0.0" }
actix-cors = "0.7.0"
lifi = { git = "https://github.com/piotrostr/listen", package = "lifi", branch = "feat/v4.0.0" }
blockhash-cache = { git = "https://github.com/piotrostr/listen", package = "blockhash-cache", branch = "feat/v4.0.0" }
dashmap = "6.1.0"
parking_lot = "0.12.3"
evm-approvals = { git = "https://github.com/piotrostr/listen", package = "evm-approvals", branch = "feat/v4.0.0" }
hex = "0.4.3"
tracing-subscriber = "0.3.19"
solana-sdk = "2.2.1"
base64 = "0.22.1"
bincode = "1.3.3"
resend-rs = "0.12.0"

[[bin]]
name = "engine"
path = "bin/engine.rs"
