[package]
name = "listen-kit"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Blockchain actions for AI agents"
documentation = "https://docs.listen-rs.com"

[features]
default = ["http"]
full = ["http", "solana", "evm"]
http = [
  "actix-web",
  "actix-cors",
  "actix-web-lab",
  "tokio-stream",
  "jsonwebtoken",
  "redis",
]
solana = [
  "solana-account-decoder",
  "solana-sdk",
  "spl-token",
  "solana-client",
  "solana-transaction-status",
  "spl-associated-token-account",
]
evm = ["alloy", "uniswap-v3-sdk", "uniswap-sdk-core"]

[dependencies]
# Core dependencies
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.4", features = ["json", "stream", "multipart"] }
bincode = "1.3.3"
borsh = "1.5.1"
base64 = "0.22.1"
timed = "0.2.1"
serde = "1.0.199"
serde_json = "1.0.116"
rand = "0.8.5"
chrono = "0.4.39"
dotenv = "0.15.0"
hex = "0.4.3"
anyhow = "1.0.95"
rig-core = { version = "0.6.1", git = "https://github.com/piotrostr/rig", branch = "feat/anthropic-streaming-api" }
rig-tool-macro = "0.4.0"
thiserror = "2.0.11"
once_cell = "1.20.2"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
futures = "0.3.31"
serde_with = "3.12.0"
async-trait = "0.1.85"
ctor = "0.2.0"
futures-util = { version = "0.3" }

# evm
alloy = { version = "0.9", features = ["full"], optional = true }
uniswap-v3-sdk = { version = "3.3.0", features = [
  "extensions",
  "std",
], optional = true }
uniswap-sdk-core = { version = "3.3.0", optional = true }

# solana
solana-account-decoder = { version = "2.1.9", optional = true }
solana-sdk = { version = "2.1.9", optional = true }
spl-token = { version = "7.0.0", optional = true }
solana-client = { version = "2.1.9", optional = true }
solana-transaction-status = { version = "2.1.9", optional = true }
spl-associated-token-account = { version = "6.0.0", optional = true }

# http
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.6", optional = true }
actix-web-lab = { version = "0.20", optional = true }
tokio-stream = { version = "0.1.17", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
redis = { version = "0.28.2", features = ["tokio-comp"], optional = true }
