[package]
name = "listen-kit"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Blockchain actions for AI agents"
documentation = "https://docs.listen-rs.com"

[features]
default = ["full"]
full = ["http", "solana", "evm", "hype"]
http = [
  "actix-web",
  "actix-cors",
  "actix-web-lab",
  "tokio-stream",
  "jsonwebtoken",
  "redis",
  "privy",
]
engine = ["listen-engine", "http"]
solana = [
  "solana-account-decoder",
  "solana-sdk",
  "spl-token",
  "solana-client",
  "solana-transaction-status",
  "spl-associated-token-account",
]
evm = ["alloy", "uniswap-v3-sdk", "uniswap-sdk-core"]
tokenizer = ["tokenizers", "lazy_static"]
hype = ["evm", "hyperliquid_rust_sdk"]

[dependencies]
# Core dependencies
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.4", features = ["json", "stream", "multipart"] }
bincode = "1.3.3"
borsh = "1.5.1"
base64 = "0.22.1"
timed = "0.2.1"
serde = "1.0.199"
serde_json = "1.0.116"
rand = "0.8.5"
chrono = "0.4.39"
dotenv = "0.15.0"
hex = "0.4.3"
anyhow = "1.0.95"
rig-core = { git = "https://github.com/piotrostr/rig", branch = "fix/openai-id-missing" }
rig-tool-macro = { git = "https://github.com/piotrostr/rig-tool-macro" }
thiserror = "2.0.11"
once_cell = "1.20.2"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.41"
futures = "0.3.31"
serde_with = "3.12.0"
async-trait = "0.1.85"
ctor = "0.2.0"
futures-util = { version = "0.3" }
lifi = { git = "https://github.com/piotrostr/listen", package = "lifi", branch = "feat/v4.0.0" }
listen-tracing = { git = "https://github.com/piotrostr/listen", package = "listen-tracing", branch = "feat/v4.0.0" }
listen-memory = { git = "https://github.com/piotrostr/listen", package = "listen-memory", branch = "feat/v4.0.0" }
blockhash-cache = { git = "https://github.com/piotrostr/listen", package = "blockhash-cache", branch = "feat/v4.0.0" }
evm-approvals = { git = "https://github.com/piotrostr/listen", package = "evm-approvals", branch = "feat/v4.0.0" }
listen-mongo = { git = "https://github.com/piotrostr/listen", package = "listen-mongo", branch = "feat/v4.0.0" }
listen-adapter = { git = "https://github.com/piotrostr/listen", package = "listen-adapter", branch = "feat/v4.0.0" }

# evm
alloy = { version = "0.9", features = ["full"], optional = true }
uniswap-v3-sdk = { version = "3.3.0", features = [
  "extensions",
  "std",
], optional = true }
uniswap-sdk-core = { version = "3.3.0", optional = true }

# solana
solana-account-decoder = { version = "2.1.9", optional = true }
solana-sdk = { version = "2.1.9", optional = true }
spl-token = { version = "7.0.0", optional = true }
solana-client = { version = "2.1.9", optional = true }
solana-transaction-status = { version = "2.1.9", optional = true }
spl-associated-token-account = { version = "6.0.0", optional = true }

# http
privy = { version = "0.9.0", optional = true }
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.6", optional = true }
actix-web-lab = { version = "0.20", optional = true }
tokio-stream = { version = "0.1.17", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
redis = { version = "0.28.2", features = ["tokio-comp"], optional = true }
tokenizers = { version = "0.21.1", optional = true }
lazy_static = { version = "1.5.0", optional = true }
tracing-subscriber = "0.3.19"
petgraph = "0.7.1"

hyperliquid_rust_sdk = { git = "https://github.com/piotrostr/hyperliquid-rust-sdk", optional = true }
ethers = "2.0.14"

listen-engine = { git = "https://github.com/piotrostr/listen", package = "listen-engine", optional = true, branch = "feat/v4.0.0" }
