[package]
name = "listen-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
mcp-core = { version = "0.1.42", features = ["sse"] }
mcp-core-macros = "0.1.11"
reqwest = { version = "0.11", features = ["json"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
