[package]
name = "listen-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rig-core = { git = "https://github.com/piotrostr/rig", branch = "fix/openai-id-missing" }
anyhow = "1.0.97"
qdrant-client = "1.13.0"
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
listen-mongo = { path = "../listen-mongo" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
regex = "1.11.1"
