[package]
name = "listen-mongo"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { version = "2.8.1", features = ["tokio-runtime"] }
bson = { version = "2.9.0", features = ["chrono-0_4"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.41"
anyhow = "1.0.95"
futures = "0.3.31"
serde = "1.0.199"
dotenv = "0.15.0"
