[package]
name = "listen-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
spl-token.workspace = true

listen-pump-fun.workspace = true
listen-util.workspace = true