[package]
name = "listen-jito"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
jito-protos.workspace = true
serde.workspace = true
serde_json.workspace = true
timed.workspace = true
tonic.workspace = true
tokio.workspace = true
reqwest.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true

listen-searcher-client.workspace = true
listen-util.workspace = true

[dev-dependencies]
dotenv.workspace = true
