[package]
name = "listen-pump-fun"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
anchor-lang.workspace = true
borsh.workspace = true
futures-util.workspace = true
jito-protos.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
spl-associated-token-account.workspace = true

listen-searcher-client.workspace = true
listen-util.workspace = true
